# torrust-tracker-deployer

./: .dockerignore  .gitignore  .markdownlint.json  .prettierignore  .taplo.toml  .yamllint-ci.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  cloud-init.yml  cspell.json  environment-template.json  main.tf  meson.build  project-words.txt  schema.json  test-github-access.txt  test-refactor-tracking.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: backup-container.yaml  cargo-security-audit.yml  code-statistics.yml  codeql.yml  container.yaml  copilot-setup-steps.yml  coverage.yml  docker-security-scan.yml  linting.yml  publish-crate.yaml  test-dependency-installer.yml  test-e2e-config.yml  test-e2e-deployment.yml  test-e2e-infrastructure.yml  test-e2e-provision.yml  test-e2e.yml  test-lxd-provision.yml  test-multipass-provision.yml  test-sdk-examples.yml  test-vm-provision.yml  testing.yml
config/ansible/: README.md  ansible.cfg  install-docker-compose.yml  install-docker.yml  inventory.yml  wait-cloud-init.yml
config/ci/: main.tf
config/lxd/: README.md
custom-logs/: log.txt
docker/backup/: Dockerfile  README.md  backup.sh  backup_test.bats
docker/deployer/: Dockerfile  README.md  entry_script_sh
docker/provisioned-instance/: .dockerignore  Dockerfile  README.md  entrypoint.sh  supervisord.conf
docker/ssh-server/: Dockerfile
docs/: README.md  ansible.md  codebase-architecture.md  console-commands.md  current-implementation.md  deployment-overview.md  development-principles.md  documentation.md  e2e-testing.md  e2e-tests-refactoring-plan.md  linting.md  meson.md  module-documentation-improvement.md  opentofu.md  release-process.md  roadmap-questions.md  roadmap.md  structured-logging-implementation-plan.md  three-level-architecture.md  tofu-lxd-configuration.md  vision-infrastructure-as-software.md  vm-providers.md
docs/ai-training/: README.md  questionnaire.md
docs/analysis/: release-handler-code-quality.md
docs/cli/: README.md  commands.json
docs/contributing/: README.md  branching.md  commands.md  commit-process.md  ddd-layer-placement.md  ddd-practices.md  debugging.md  environment-variables-naming.md  error-handling.md  github-markdown-pitfalls.md  known-issues.md  linting.md  logging-guide.md  module-organization.md  output-handling.md  pr-review-guide.md  roadmap-issues.md  secret-handling.md  spelling.md  templates.md  testing.md
docs/decisions/: README.md  TEMPLATE.md  actionable-error-messages.md  agents-md-migration.md  application-layer-progress-reporting-trait.md  atomic-ansible-playbooks.md  bind-mount-standardization.md  caddy-for-tls-termination.md  cargo-lock-tracking-for-application-reproducibility.md  cloud-init-ssh-port-reboot.md  command-state-return-pattern.md  concurrent-docker-image-builds-in-tests.md  configuration-directories-as-secrets.md  configuration-dto-layer-placement.md  database-configuration-structure-in-templates.md  docker-compose-local-validation-placement.md  docker-in-docker-for-e2e-tests.md  docker-phase-architecture.md  docker-security-scan-exit-code-zero.md  docker-testing-evolution.md  docker-testing-rejection.md  docker-testing-revision.md  docker-ufw-firewall-security-strategy.md  environment-variable-injection-in-docker-compose.md  environment-variable-prefix.md  error-context-strategy.md  execution-context-wrapper.md  external-tool-adapters-organization.md  grafana-default-port-3000.md  grafana-integration-pattern.md  hetzner-ssh-key-dual-injection.md  infrastructure-module-organization.md  lxd-over-multipass.md  lxd-vm-over-containers.md  md060-table-formatting-disabled.md  meson-removal.md  mysql-over-mariadb.md  nickel-cli-driven-template-system.md  per-service-tls-configuration.md  port-zero-not-supported.md  (+23 more)
docs/e2e-testing/: README.md  advanced.md  architecture.md  contributing.md  manual-grafana-testing-results.md  manual-testing-mysql.md  manual-testing.md  running-tests.md  test-suites.md  troubleshooting.md
docs/external-issues/: README.md
docs/features/: README.md  TEMPLATE-QUESTIONS.md  TEMPLATE-README.md  TEMPLATE-SPECIFICATION.md  active-features.md  completed-features.md
docs/github-actions-issues/: README.md  docker-apt-cache-issue.md
docs/implementation-plans/: README.md  issue-220-test-command-architecture.md
docs/issues/: 10-epic-ui-layer-destroy-command.md  102-epic-user-output-architecture-improvements.md  103-extract-verbosity-filtering-logic.md  105-create-variables-template.md  106-convert-firewall-template-to-static.md  107-centralize-user-output-via-dependency-injection.md  11-epic-app-layer-destroy-command-add-destroy-command.md  112-epic-refactor-and-improve-e2e-test-execution.md  113-1-1-create-dependency-installation-package-for-e2e-tests.md  114-1-1-1-create-detection-logic-package.md  115-1-1-2-create-cli-binary-with-check-command.md  116-1-1-3-create-docker-test-infrastructure.md  (+212 more)
e2e-full/: environment.json
fixtures/: testing_ed25519_encrypted  testing_ed25519_encrypted.pub  testing_rsa  testing_rsa.pub
provisioning/: CHANGELOG.md  NICKEL_ROUNDTRIP.md  QUICKSTART.md  README.md  UPDATES_2025-12-22.md  config-form.toml  config.ncl  constraints.toml  roundtrip.sh  web-form.sh
schemas/: README.md  environment-config.json
scripts/: generate-ai-training-outputs.sh  install-git-hooks.sh  lint-parallel.sh  lint.sh  pre-commit.sh  update-dependencies.sh
src/: app.rs  command.rs  config.rs  container.rs  help.rs  lib.rs  logging.rs  lxd.rs  main.rs  opentofu.rs  ssh.rs
tests/: ai_enforcement.rs  ai_precommit_enforcement.rs  e2e_create_command.rs  e2e_destroy_command.rs  e2e_integration.rs  file_lock_multiprocess.rs  logging_integration.rs  ssh_client_integration.rs  template_integration.rs  user_output_reentrancy.rs  validate_ai_training_examples.rs
(+1917 files in other folders)
