[workspace]
members = [
  "packages/linting",
]
resolver = "2"

[package]
name = "torrust-tracker-deploy"
version = "0.1.0"
edition = "2021"
description = "Torrust Tracker Deployment Infrastructure with Ansible and OpenTofu"
license = "MIT"
default-run = "torrust-tracker-deploy"

[[bin]]
name = "torrust-tracker-deploy"
path = "src/main.rs"

[[bin]]
name = "e2e-tests-full"
path = "src/bin/e2e_tests_full.rs"

[[bin]]
name = "e2e-config-tests"
path = "src/bin/e2e_config_tests.rs"

[[bin]]
name = "e2e-provision-tests"
path = "src/bin/e2e_provision_tests.rs"

[[bin]]
name = "linter"
path = "src/bin/linter.rs"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.0", features = [ "derive" ] }
derive_more = "0.99"
rust-embed = "8.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tempfile = "3.0"
tera = "1.0"
testcontainers = { version = "0.25", features = [ "blocking" ] }
thiserror = "1.0"
torrust-linting = { path = "packages/linting" }
tracing = { version = "0.1", features = [ "attributes" ] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json", "fmt" ] }
uuid = { version = "1.0", features = [ "v4", "serde" ] }

[dev-dependencies]
rstest = "0.23"
tracing-test = "0.2"
