[workspace]
members = [
  "packages/linting",
  "packages/dependency-installer",
]
resolver = "2"

[package]
name = "torrust-tracker-deployer"
version = "0.1.0"
edition = "2021"
description = "Torrust Tracker Deployer - Deployment Infrastructure with Ansible and OpenTofu"
license = "MIT"
default-run = "torrust-tracker-deployer"

[lib]
name = "torrust_tracker_deployer_lib"

[[bin]]
name = "torrust-tracker-deployer"
path = "src/main.rs"

[[bin]]
name = "e2e-tests-full"
path = "src/bin/e2e_tests_full.rs"

[[bin]]
name = "e2e-config-and-release-tests"
path = "src/bin/e2e_config_and_release_tests.rs"

[[bin]]
name = "e2e-provision-and-destroy-tests"
path = "src/bin/e2e_provision_and_destroy_tests.rs"

[[bin]]
name = "linter"
path = "src/bin/linter.rs"

[[bin]]
name = "test_logging"
path = "src/bin/test_logging.rs"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.0", features = [ "derive" ] }
derive_more = "0.99"
figment = { version = "0.10", features = [ "json" ] }
parking_lot = "0.12"
rust-embed = "8.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tempfile = "3.0"
tera = "1.0"
testcontainers = { version = "0.25", features = [ "blocking" ] }
thiserror = "1.0"
torrust-dependency-installer = { path = "packages/dependency-installer" }
torrust-linting = { path = "packages/linting" }
tracing = { version = "0.1", features = [ "attributes" ] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json", "fmt" ] }
uuid = { version = "1.0", features = [ "v4", "serde" ] }

[dev-dependencies]
rstest = "0.23"
tracing-test = "0.2"
