[workspace]
members = [
  "packages/linting",
  "packages/dependency-installer",
  "packages/sdk",
  "packages/deployer-types",
]
resolver = "2"

[package]
name = "torrust-tracker-deployer"
version = "0.1.0"
edition = "2021"
description = "Torrust Tracker Deployer - Deployment Infrastructure with Ansible and OpenTofu"
license = "MIT"
default-run = "torrust-tracker-deployer"

[lib]
name = "torrust_tracker_deployer_lib"

[[bin]]
name = "torrust-tracker-deployer"
path = "src/main.rs"

[[bin]]
name = "e2e-complete-workflow-tests"
path = "src/bin/e2e_complete_workflow_tests.rs"

[[bin]]
name = "e2e-deployment-workflow-tests"
path = "src/bin/e2e_deployment_workflow_tests.rs"

[[bin]]
name = "e2e-infrastructure-lifecycle-tests"
path = "src/bin/e2e_infrastructure_lifecycle_tests.rs"

[[bin]]
name = "linter"
path = "src/bin/linter.rs"

[[bin]]
name = "test_logging"
path = "src/bin/test_logging.rs"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
clap = { version = "4.0", features = [ "derive" ] }
derive_more = { version = "2.1", features = [ "display", "from" ] }
figment = { version = "0.10", features = [ "json" ] }
parking_lot = "0.12"
reqwest = "0.12"
rust-embed = "8.0"
schemars = "1.1"
secrecy = { version = "0.10", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tempfile = "3.0"
tera = "1.0"
testcontainers = { version = "0.26", features = [ "blocking" ] }
thiserror = "2.0"
torrust-dependency-installer = { path = "packages/dependency-installer" }
torrust-deployer-types = { path = "packages/deployer-types" }
torrust-linting = { path = "packages/linting" }
tracing = { version = "0.1", features = [ "attributes" ] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "json", "fmt" ] }
url = { version = "2.0", features = [ "serde" ] }
uuid = { version = "1.0", features = [ "v4", "serde" ] }

[dev-dependencies]
regex = "1.0"
rstest = "0.26"
tracing-test = "0.2"
